test/haskell2010/conformance/negative/prelude-empty-import.hs
module Main where

import Prelude ()

main =
  map
